ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sujindar-ingress
  namespace: default      
spec:
  rules:
    - host: ec2-13-127-0-192.ap-south-1.compute.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /book/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
